# easy_trajectories

./: Cargo.toml  LICENSE  README.md  index.md  simulation.rs
src/: simulation.rs
