[package]
name = "easy_trajectories"
description = "Simple to use trajectory calculator with drag."
version = "0.1.2"
edition = "2021"
authors = ["Kadulous0"]
license = "MIT"
homepage = "https://kadulous0.github.io/easy_trajectories/"
repository = "https://github.com/Kadulous0/easy_trajectories"
readme = "README.md"
keywords = ["math", "physics", "trajectory", "solver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.2"
egui = "0.17.0"